--- a/css/foodsearch.css
+++ b/css/foodsearch.css
@@ -4,6 +4,9 @@ input {
 	background-color: #E1E1E1;
 }
 
+.title {
+	font-size: 300%;
+}
 .search {
 	border-radius: 10px;
 	border: none;
@@ -14,6 +17,9 @@ input {
 	padding-bottom: 0.25%;
 	font-size: 300%;
 	transition: all .5s linear;
+	margin-left: 1%;
+	margin-right: 1%;
+
 }
 
 #table {
@@ -27,7 +33,7 @@ input {
 
 .bootstrap-tagsinput {
   display: inline-block;
-  width: 89%;
+  width: 96%;
   overflow: wrap;
 
 }
