--- a/css/foodsearch.css
+++ b/css/foodsearch.css
@@ -17,6 +17,7 @@ input {
 .category {
 	font-size: 150%;
 	font-weight: 600;
+	padding-left: 1.5%;
 }
 .search {
 	border-radius: 10px;
@@ -35,6 +36,7 @@ input {
 #table {
 	overflow-x: auto;
 	padding-top: 0.5%;
+	padding-left: 1.5%;
 }
 
 .fgtext {
