--- a/css/foodsearch.css
+++ b/css/foodsearch.css
@@ -5,7 +5,7 @@ input {
 }
 
 .titlesearch {
-	margin-left: 1.5%;
+	/*margin-left: 1.5%;*/
 	padding-bottom: 0.75%;
 }
 
@@ -23,13 +23,14 @@ input {
 	border-radius: 10px;
 	border: none;
 	background-color: #E1E1E1;
-	padding-left: 0.5%;
+	/*padding-left: 0.5%;*/
+	/*padding-left: 0.5%;
 	padding-right: 0.5%;
 	padding-top: 0.25%;
-	padding-bottom: 0.25%;
+	padding-bottom: 0.25%;*/
 	font-size: 300%;
 	transition: all .5s linear;
-	margin-right: 1.5%;
+	/*margin-right: 1.5%;*/
 
 }
 
@@ -46,16 +47,17 @@ input {
 
 .bootstrap-tagsinput {
   display: inline-block;
-  /*width: 100%;*/
-  white-space: nowrap;
-  overflow: scroll;
+  /*white-space: nowrap;
+  overflow: scroll;*/
   background: #E1E1E1;
+  padding: 0;
 
 }
 
 .bootstrap-tagsinput input {
-  background: #E1E1E1;
+  background: white;/*#E1E1E1;*/
   width: 100%;
+  padding: 0;
 }
 
 .bootstrap-tagsinput .tag {
