--- a/css/foodsearch.css
+++ b/css/foodsearch.css
@@ -10,12 +10,13 @@ input {
 }
 
 .title {
-	font-size: 300%;
+	font-size: 600%;
 	font-weight: 600;
+	margin-left: 1.5%;
 }
 
 .category {
-	font-size: 150%;
+	font-size: 325%;
 	font-weight: 600;
 	padding-left: 1.5%;
 }
@@ -30,7 +31,8 @@ input {
 	padding-bottom: 0.25%;
 	font-size: 300%;
 	transition: all .5s linear;
-	/*margin-right: 1.5%;*/
+	margin-right: 1.5%;
+	margin-left: 1.5%;
 
 }
 
