--- a/css/foodsearch.css
+++ b/css/foodsearch.css
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
 input {
 	border: none;
 	outline: none;
@@ -35,13 +31,14 @@ input {
 	padding-bottom: 0.25%;
 	font-size: 300%;
 	transition: all .5s linear;
-	margin-right: 1.5%;
+	margin-right: 3%;
 	margin-left: 3%;
 
 }
 
 #table {
-	overflow-x: auto;
+	overflow-x: scroll;
+	-webkit-overflow-scrolling: touch;
 	padding-top: 0.5%;
 	padding-left: 3%;
 }
