--- a/css/foodsearch.css
+++ b/css/foodsearch.css
@@ -47,10 +47,6 @@ input {
 	transition: all 0.5s;
 }
 
-/*#breh {
-	overflow-x: scroll;
-}*/
-
 .fgtext {
 	background-color: black;
 	color: white;
@@ -120,6 +116,10 @@ input {
 	background: #E1E1E1;
 	display: inline-block;
 	vertical-align: top;
+}
+
+.fa-search {
+	vertical-align: middle;
 }
 
 #search_results {
