--- a/css/foodsearch.css
+++ b/css/foodsearch.css
@@ -62,6 +62,9 @@ input {
   flex-grow: 100%;
   margin-left: 0.5%;
   margin-right: 0.5%;
+  padding: 0px !important;
+  padding-top: 1% !important;
+  padding-bottom: 1% !important;
 
 
 }
@@ -69,6 +72,7 @@ input {
 .bootstrap-tagsinput input {
   background: #E1E1E1;
   flex-grow: 100%;
+  padding: 0px !important;
 }
 
 .bootstrap-tagsinput .tag {
@@ -115,8 +119,11 @@ input {
 
 .parent-search {
 	background: #E1E1E1;
-	display: inline-block;
-	vertical-align: top;
+	/*display: inline-block;
+	vertical-align: top;*/
+	font-size: 120%;
+	padding-left: 1%;
+	padding-right: 1%;
 }
 
 .fa-search {
