--- a/css/foodsearch.css
+++ b/css/foodsearch.css
@@ -84,7 +84,7 @@ input {
 }
 
 .line {
-	border-top: 1px solid black;
+	border-top: 2px solid black;
 	transition: all 0.5s;
 }
 
@@ -139,10 +139,19 @@ input {
 .desc {
 	font-size: 300%;
 	font-weight: 500;
+	padding-top: 1.5%;
+	padding-left: 3%;
 }
 
 .food_cat {
 	font-size: 200%;
+	padding-top: 1%;
+	padding-bottom: 1.5%;
+	padding-left: 3%;
+}
+
+.food {
+	border-bottom: 1px solid black;
 }
 
 .owner {
